--- a/public/index.html
+++ b/public/index.html
@@ -161,9 +161,31 @@ stroke-linecap="round" stroke-linejoin="round">
                     Tags
                 </span>
             </a>
-            <a class="button" href="https://koalajahat.org/blog" rel="noopener" title="Blog">
+            <a class="button" href="https://www.linkedin.com/in/achmadrahman/" rel="noopener" title="LinkedIn">
                 <span class="button-inner">
-                    Blog&nbsp;
+                    LinkedIn&nbsp;
+                    <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
+                        stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="14" width="14">
+                        <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
+                        <path d="M15 3h6v6"></path>
+                        <path d="M10 14L21 3"></path>
+                    </svg>
+                </span>
+            </a>
+            <a class="button" href="https://github.com/achmadrahmanm" rel="noopener" title="GitHub">
+                <span class="button-inner">
+                    GitHub&nbsp;
+                    <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
+                        stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="14" width="14">
+                        <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
+                        <path d="M15 3h6v6"></path>
+                        <path d="M10 14L21 3"></path>
+                    </svg>
+                </span>
+            </a>
+            <a class="button" href="https://fastwork.id/user/achmadrahmanm" rel="noopener" title="FastWork">
+                <span class="button-inner">
+                    FastWork&nbsp;
                     <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
                         stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="14" width="14">
                         <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
@@ -178,7 +200,7 @@ stroke-linecap="round" stroke-linejoin="round">
     </main>
     
 <footer class="footer">
-    <span>&copy; 2025 Achmad Rahman Mawardi</span> ·     
+    <span>&copy; 2026 Achmad Rahman Mawardi</span> ·     
     <span>
     Powered by 
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">hugo</a>, <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">papermod</a>, &amp;
